package com.logicloop.OrderInfo;

public class DealerInfo extends SalesChannelInfo {

    @Override
    public String queryChannelStatus(String vehicleId) {
        // TODO implement business logic
        return this.channelStatus;
    }
    
}
