package com.logicloop.OrderInfo;

public class ImporterInfo extends SalesChannelInfo {

    @Override
    public String queryChannelStatus(String vehicleId) {
        // TODO implement business logic
        return this.channelStatus;
    }
    
}
