package com.logicloop.OrderInfo;

public class VehicleInfo {
    private String vehicleId;
    
    public String findVehicleId(String orderId) {
        // TODO implement business logic
        return this.vehicleId;
    }
}
